--- a/ads/templates/ads/full_list.html
+++ b/ads/templates/ads/full_list.html
@@ -5,15 +5,15 @@
 <ul>
     {% for ad in full_list %}
     <li>
-        <p> Автор: {{ ad.author }} </p>
+        <p> Автор: <a href="{% url 'ads:profile' user.id %}">{{ ad.author.id }} {{ ad.author }}</a></p>
         <p> Категории: {% for set in ad.categories.all %}
             {{ set }}
             {% endfor %}
         </p>
             <p> {{ ad.date_pub }} </p>
-            <a href="{% url 'ads:ad_detail' ad.id %}">{{ ad.title }}</a>
+            <p><a href="{% url 'ads:ad_detail' ad.id %}">{{ ad.title }}</a></p>
             {% if ad.photo %}
-            <p> <img alt="ad's image" src="{{ ad.photo.url }}" style="width: 10%; height: 10%;"></p>
+              <p><img alt="ad's image" src="{{ ad.photo.url }}" style="width: 10%; height: 10%;"></p>
             {% else %}
             <p>Нет ни одной фотографии</p>
             {% endif %}
