--- a/templates/base.html
+++ b/templates/base.html
@@ -3,15 +3,17 @@
 <html>
 <head>
     <title>{% block title %}Главная страница{% endblock %}</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<!--    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">-->
+<!--    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">-->
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 </head>
 <body>
 <div id="header" align="center">
     <span class="logo">Домашний проект Филиппова Константина @ Direct Line Academy</span>
     {% if request.user.is_authenticated %}
-    <p>Текущий пользователь: {{ request.user }} <a href="/account/logout">Выйти</a></p>
+    <p>Текущий пользователь: {{ request.user }} <a href="/account/logout">Выйти</a> | <a href="{% url 'ads:profile' user.id %}">Профиль</a> </p>
     {% else %}
     <p>Вы не авторизованы. <a href="{% url 'account:login' %}">Войти</a> | <a href="{% url 'account:signup' %}">Зарегистрироваться</a></p>
     {% endif %}
