--- a/ads/templates/ads/index.html
+++ b/ads/templates/ads/index.html
@@ -2,28 +2,26 @@
 {% block title %}Главная страница{% endblock %}
 {% block content %}
 {% if last_ad %}
-<ul>
-    {% for ad in last_ad %}
-    <li>
-        <p> Автор: {{ ad.author }} </p>
-        <p> {% for set in ad.categories.all %}
+  {% for ad in last_ad %}
+<div class="ad">
+    <div style="margin-left: 10px;">
+        <p> Автор: <a href="{% url 'ads:profile' ad.author.id %}">{{ ad.author }}</a></p>
+        <p> Категории: {% for set in ad.categories.all %}
             {{ set }}
             {% endfor %}
         </p>
-        <p> {{ ad.date_pub }} </p>
-        <a href="{% url 'ads:ad_detail' ad.id %}">
-            <p>{{ ad.title }}</p>
-        </a>
-        {% if ad.photo %}
-            <p> <img alt="ad's image" src="{{ ad.photo.url }}" style="width: 10%; height: 10%;"></p>
+            <p> {{ ad.date_pub }} </p>
+            <p><a href="{% url 'ads:ad_detail' ad.id %}">{{ ad.title }}</a></p>
+            {% if ad.photo %}
+              <p><img alt="ad's image" src="{{ ad.photo.url }}" style="width: 10%; height: 10%;"></p>
             {% else %}
             <p>Нет ни одной фотографии</p>
-        {% endif %}
-        <p> {{ ad.description }} </p>
-        <hr>
-        {% endfor %}
-</ul>
+            {% endif %}
+        <p> {{ ad.short_text }} </p>
+    </div>
+</div>
+  {% endfor %}
 {% else %}
-<p>Нет ни одной публикации</p>
+  <p>Нет ни одной публикации</p>
 {% endif %}
 {% endblock %}}
