--- a/activebox/style.css
+++ b/activebox/style.css
@@ -4,8 +4,9 @@ body {
     font-family: 'Raleway', sans-serif;
     font-size: 14px;
     color: #6c7279;
+    -webkit-font-smoothing: antialiased;
     
-    background-color: #000;
+    background-color: #fff;
 }
 
 *,
@@ -14,6 +15,13 @@ body {
     box-sizing: border-box;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
+p {
+    margin: 0 0 10px 0;
+}
 
 
 /* Container
@@ -25,12 +33,17 @@ body {
 }
 
 
-
 /* Header
 =================*/
 
 .header {
-
+    width: 100%;
+    height: 100px;
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
 }
 
 .header__inner {
@@ -64,6 +77,81 @@ body {
     transition: opacity .1s linear;
 }
 
+.nav__link:first-child {
+    margin-left: 0;
+}
+
 .nav__link:hover {
     opacity: 1;
 }
+
+
+/* Intro
+================*/
+
+.intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 750px;
+    padding-top: 100px;
+    
+    background: #31344e url("img/intro-bg.jpg") center no-repeat;
+    background-size: cover;
+}
+
+.intro__inner {
+    width: 100%;
+    max-width: 970px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.intro__title {
+    margin: 0 0 30px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 65px;
+    line-height: 1.1;
+    color: #fff;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.intro__subtitle {
+    font-size: 22px;
+    color: #fff;
+    line-height: 1.5;
+    font-weight: 400;
+    margin-bottom: 60px;
+}
+
+
+
+/* Button
+================*/
+.btn {
+    display: inline-block;
+    vertical-align: top;
+    padding: 14px 40px;
+    border-radius: 3px;
+    border: 0;
+    cursor: pointer;
+    
+    font-family: 'Raleway';
+    font-size: 13px;
+    color: #fff;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: none;
+    
+    transition: background .1s linear;
+    
+}
+
+.btn--red {
+    background-color: #e84545;
+}
+
+.btn--red:hover {
+    background-color: #dd3434;
+} 
