--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,36 @@
 body {
-font-family: Arial, Verdana,  sans-serif;
-background-color: #f0f0f0;
-width:800px;
-margin:1px auto;
+    margin: 0;
+    font-size: 14px;
+    color: #6c7279;
+    -webkit-font-smoothing: antialiased;
+    background-color: #fff;
 }
 
-hr {
-size: 0px;
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
+p {
+    margin: 0 0 10px 0;
+}
+
 
 .ad {
 background-color: #E2E2E2;
+}
+
+.header {
+    width: 100%;
+    height: 100px;
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
 }
