--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<div id="header" align="center">
+<div class="header" align="center">
     <span class="logo">Домашний проект Филиппова Константина @ Direct Line Academy</span>
     {% if request.user.is_authenticated %}
     <p>Текущий пользователь: {{ request.user }} <a href="/account/logout">Выйти</a> |
