--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,12 @@
 body {
     margin: 0;
+    
+    font-family: 'Arial', sans-serif;
     font-size: 14px;
     color: #6c7279;
     -webkit-font-smoothing: antialiased;
-    background-color: #fff;
+    
+    background-color: #ebedf0;
 }
 
 *,
@@ -16,21 +19,147 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
-p {
-    margin: 0 0 10px 0;
+/*Ads
+=================*/
+.ads {
+    padding: 20px 0;
+}
+
+.ads__inner {
+    padding: 1px 10px;
+    margin: 10px 200px;
+    background-color: #fff;
+    border-radius: 5px;
+}
+
+.ads__inner--author {
+    margin: 14px 0 0 0;
+    color: #000
+}
+
+.ads__inner--date {
+    font-size: 12px;
+    opacity: .5;
+    padding: 0 5px;
+}
+
+.ads__inner--category {
+    
+}
+
+.ads__inner--title {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 10px 0 10px 0;
+}
+
+.ads__inner--text {
+    margin: 14px 0 14px 0;
 }
 
 
-.ad {
-background-color: #E2E2E2;
+/* Container
+=================*/
+.container {
+    width: 100%;
+    max-width: 1170px;
+    margin: 0 auto;
 }
 
+
+/*Header
+=================*/
 .header {
     width: 100%;
-    height: 100px;
+    height: 60px;
     
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1000;
+}
+
+.header__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+    
+    border-bottom: 1px solid #515369;
+}
+
+
+/*Nav*
+=================*/
+.nav {
+    display: flex;
+    font-size: 15px;
+    font-weight: 700;
+/*    text-transform: uppercase;*/
+}
+
+.nav__link {
+    margin-left: 25px;
+    
+    color: #000;
+    text-decoration: none;
+    opacity: .75;
+    
+    transition: opacity .1s linear;
+}
+
+/*
+.nav__link:first-child {
+    margin-left: 0;
+}
+*/
+
+.nav__link:hover {
+    opacity: 1;
+}
+
+
+/* Option
+=================*/
+
+.option {
+/*
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100px;
+*/
+    padding-top: 80px;
+    
+/*
+    background: #31344e url("img/intro-bg.jpg") center no-repeat;
+    background-size: cover;
+*/
+}
+
+.option__inner {
+    width: 100%;
+    max-width: 970px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.user {
+    color:blueviolet
+}
+
+/*Back
+=================*/
+
+.back {
+    width: 100%;
+    height: 60px;
+}
+
+.back__inner {
+    align-items: center;
+    text-align: center;
+    padding: 20px 0;
+    
+    border-top: 1px solid #515369;
 }
