--- a/ads/templates/ads/category_view.html
+++ b/ads/templates/ads/category_view.html
@@ -2,12 +2,11 @@
 {% block title %}Category{% endblock %}
 {% block content %}
 {% if category_view %}
-<ul>
-    {% for ad in category_view %}
-    <li>
-        <p> {{ ad.author }} </p>
-        <a href="{% url 'ads:ad_detail' ad.id %}"><p> {{ ad.title }}</p></a>
-        <p> {{ ad.date_pub }} </p>
+
+{% for ad in category_view %}
+<div class="ads__inner">
+    <div class="ads__inner--author"> Автор: <a href="{% url 'ads:profile' ad.author.id %}">{{ ad.author }}</a><span class="ads__inner--date"> {{ ad.date_pub }} </span></div>
+    <a href="{% url 'ads:ad_detail' ad.id %}">{{ ad.title }}</a>
         {% if ad.photo %}
           <p><img alt="ad's image" src="{{ ad.photo.url }}" style="width: 10%; height: 10%;"></p>
         {% else %}
@@ -16,7 +15,7 @@
         <p> {{ ad.short_text }} </p>
         <hr>
         {% endfor %}
-</ul>
+</div>
 {% else %}
 <p>Нет ни одной публикации</p>
 {% endif %}
