--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 <!--    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">-->
 <!--    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">-->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>Home project</title>
+    <title>Django project</title>
 </head>
 <head>
     <title>{% block title %}Главная страница{% endblock %}</title>
