--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,7 @@
                 {{ category_form }}
                 <button type="submit">Выбрать</button>
             </form>
+            <a href="{% url 'ads:audio' 1 %}">Аудио</a>
         </div>
     </div>
 </div>
