--- a/static/css/style.css
+++ b/static/css/style.css
@@ -71,7 +71,7 @@ h1, h2, h3, h4, h5, h6 {
 =================*/
 .header {
     width: 100%;
-    height: 60px;
+    height: 88px;
     
     position: absolute;
     top: 0;
@@ -108,11 +108,6 @@ h1, h2, h3, h4, h5, h6 {
     transition: opacity .1s linear;
 }
 
-/*
-.nav__link:first-child {
-    margin-left: 0;
-}
-*/
 
 .nav__link:hover {
     opacity: 1;
@@ -123,18 +118,7 @@ h1, h2, h3, h4, h5, h6 {
 =================*/
 
 .option {
-/*
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100px;
-*/
-    padding-top: 80px;
-    
-/*
-    background: #31344e url("img/intro-bg.jpg") center no-repeat;
-    background-size: cover;
-*/
+    padding-top: 88px;
 }
 
 .option__inner {
@@ -148,15 +132,20 @@ h1, h2, h3, h4, h5, h6 {
     color:blueviolet
 }
 
-/*Back
+.center {
+    align-items: center;
+    text-align: center;
+}
+
+/*Footer
 =================*/
 
-.back {
+footer {
     width: 100%;
     height: 60px;
 }
 
-.back__inner {
+.footer__inner {
     align-items: center;
     text-align: center;
     padding: 20px 0;
