--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
             Домашний проект Филиппова Константина @ Direct Line Academy
         </div>
     </div>
-</footer>>
+</footer>
     
 </body>
 </html>
