--- a/ads/templates/ads/category_view.html
+++ b/ads/templates/ads/category_view.html
@@ -5,18 +5,22 @@
 
 {% for ad in category_view %}
 <div class="ads__inner">
-    <div class="ads__inner--author"> Автор: <a href="{% url 'ads:profile' ad.author.id %}">{{ ad.author }}</a><span class="ads__inner--date"> {{ ad.date_pub }} </span></div>
+    <div class="ads__inner--author">
+        Автор: <a href="{% url 'ads:profile' ad.author.id %}">{{ ad.author }}</a><span class="ads__inner--date"> {{ ad.date_pub }} </span>
+    </div>
     <a href="{% url 'ads:ad_detail' ad.id %}">{{ ad.title }}</a>
-        {% if ad.photo %}
-          <p><img alt="ad's image" src="{{ ad.photo.url }}" style="width: 10%; height: 10%;"></p>
-        {% else %}
-        <p>Нет ни одной фотографии</p>
-        {% endif %}
-        <p> {{ ad.short_text }} </p>
-        <hr>
-        {% endfor %}
+    {% if ad.photo %}
+      <p><img alt="ad's image" src="{{ ad.photo.url }}" style="width: 10%; height: 10%;"></p>
+    {% else %}
+    <p>Нет ни одной фотографии</p>
+    {% endif %}
+    <p> {{ ad.short_text }} </p>
+    <hr>
 </div>
+{% endfor %}
+
 {% else %}
 <p>Нет ни одной публикации</p>
+
 {% endif %}
 {% endblock %}
